[package]
name = "contributor_list"
version = "0.1.0"
authors = ["Caleb Denio <cjdenio44@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.5.0"
regex = "1.4.2"
