[tool.poetry]
name = "contributor_list"
version = "0.1.0"
description = ""
authors = ["Caleb Denio <cjdenio44@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
