[tool.poetry]
name = "contributor_list"
version = "0.1.0"
description = ""
authors = ["Caleb Denio <cjdenio44@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^2.11.2"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
